<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.futto.app.ui.registration.PhoneNumberEntryActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_entry_top_message"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_gravity="center" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp" />

    <TextView
        style="@style/RegistrationInputLabelStyle"
        android:text="@string/phone_number_entry_your_clinician_label" />

    <EditText
        android:id="@+id/primaryCareNumber"
        style="@style/RegistrationInputStyle"
        android:inputType="phone"
        android:hint="@string/phone_number_entry_your_clinician_hint" >
        <requestFocus />
    </EditText>

    <TextView
        style="@style/RegistrationInputLabelStyle"
        android:text="@string/phone_number_entry_research_assistant_label" />

    <EditText
        android:id="@+id/passwordResetNumber"
        style="@style/RegistrationInputStyle"
        android:inputType="phone"
        android:hint="@string/phone_number_entry_research_assistant_hint" />

    <Button
        android:id="@+id/phoneNumbersConfirmButton"
        style="@style/RegistrationSubmitButton"
        android:text="@string/number_entry_button"
        android:onClick="checkAndPromptConsent" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
    
</LinearLayout>
