<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.futto.app.ui.registration.ConsentFormActivity" >

    <TextView
        android:layout_marginTop="20dp"
        android:padding="10dp"
        android:id="@+id/consent_form_body"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_consent_form_text" />

    <Button
        android:id="@+id/consentButton"
        style="@style/RegistrationSubmitButton"
        android:onClick="consentButton"
        android:text="@string/consentButton"
        android:padding="10dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

    <Button
        android:layout_marginTop="20dp"
        android:id="@+id/doNotConsentButton"
        style="@style/RegistrationSubmitButton"
        android:onClick="doNotConsentButton"
        android:text="@string/doNotConsentButton"
        android:padding="10dp"
        android:background="@drawable/shape_button"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"/>

</LinearLayout>