<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.futto.app.ui.registration.ResetPasswordActivity" >

        <TextView
            android:id="@+id/welcoming_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_gravity="center" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="30dp" />

        <TextView
            android:id="@+id/resetPasswordCurrentPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_current_password_caption" />
        
        <EditText
            android:id="@+id/resetPasswordCurrentPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" >
            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/resetPasswordNewPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_new_password_caption" />
        
        <EditText
            android:id="@+id/resetPasswordNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/resetPasswordConfirmNewPasswordCaption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_confirm_new_password_caption" />
        
        <EditText
            android:id="@+id/resetPasswordConfirmNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center" >
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelButtonPressed"
                android:text="Cancel"
                />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerNewPassword"
                android:text="@string/reset_password_submit" />
        </LinearLayout>

     	<ProgressBar
	        android:id="@+id/progressBar"
	        style="?android:attr/progressBarStyleLarge"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_gravity="center"
	        android:visibility="gone" />

    </LinearLayout>
</ScrollView>