<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@+id/toobar"
    android:background="#65c0ba"
    android:orientation="vertical">

        <include
            layout="@layout/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@android:color/transparent" />


        <TextView
            android:id="@+id/login_welcoming_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:text="@string/login_activity_welcoming_message"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="40dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/application_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_bold"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="2dp"
            android:text="@string/application_name"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#ffffff"
            android:textSize="40dp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="80dp"
            android:background="@android:color/transparent" />

        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:height="120dp"
            android:autofillHints="@font/roboto_bold"
            android:background="@drawable/rounded_corner"
            android:fontFamily="@font/roboto_medium"
            android:hint="@string/action_relogin_pass"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textColor="#ffffff"
            android:textScaleX="1.2">

                <requestFocus />
        </EditText>

        <View
            android:layout_width="wrap_content"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:background="@drawable/rounded_btn"
            android:elevation="2dp"
            android:fontFamily="@font/roboto_bold"
            android:onClick="loginButton"
            android:text="@string/title_activity_login_string"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:textStyle="bold" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="16dp" />

        <TextView
            android:id="@+id/forgot_password_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:onClick="forgotPassword"
            android:text="@string/title_activity_forgot_password" />

</LinearLayout>