<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#65c0ba"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="org.futto.app.ui.registration.ForgotPasswordActivity" >


        <View
            android:id="@+id/view1"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="17dp"
            android:id="@+id/forgotPasswordInstructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password_instructions_text" />

        <View
            android:id="@+id/View01"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />


        <View
            android:id="@+id/View02"
            android:layout_width="wrap_content"
            android:layout_height="20dp" />

        <TextView 
            android:id="@+id/forgotPasswordNewPasswordCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_new_password_caption"
            android:textSize="17dp"
            android:padding="5dp"/>

        <EditText 
            android:id="@+id/forgotPasswordNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"/>

        <TextView
            android:layout_marginTop="20dp"
            android:textSize="17dp"
            android:padding="5dp"
            android:id="@+id/forgotPasswordConfirmNewPasswordCaption"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_password_confirm_new_password_caption"/>

        <EditText 
            android:id="@+id/forgotPasswordConfirmNewPasswordInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:background="@drawable/rounded_corner"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="cancelButtonPressed"
                android:text="Cancel"
                />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="registerNewPassword"
                android:text="@string/reset_password_submit" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>